fix: update img

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="main-page">
         <header>
             <h1>Ivan Mikhalchanka / CV</h1>
-            <img class='photo' src="../Ivan-Mikhalchanka.jpg" alt="Ivan Mikhalchanka">
+            <img class='photo' src="Ivan-Mikhalchanka.jpg" alt="Ivan Mikhalchanka">
 
             <div class="contacts">
                 <h2>Contacts</h2>
